Fixed the broken styles and animations. Also progressed with the overall structure.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,8 +1,11 @@
-* {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   font-family: Roboto, "Helvetica Neue", sans-serif;
-   /*background-color: #263238;*/
-   height: 100%;
-  }
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+html, body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
